connect the view with the list controller

--- a/apps/todos/resources/templates/todos.handlebars
+++ b/apps/todos/resources/templates/todos.handlebars
@@ -1,3 +1,8 @@
 <h1>Todos</h1>
-<input id="new-todo" type="text" placeholder="What needs to be done?">
+{{#view Todos.CreateTodoView}}
+  <input id="new-todo" type="text" placeholder="What needs to be done?">
+{{/view}}
 
+{{#collection SC.TemplateCollectionView contentBinding="Todos.todoListController"}}
+  {{content.title}}
+{{/collection}}
