the more you know section. adding the support for remaining count

--- a/apps/todos/resources/templates/todos.handlebars
+++ b/apps/todos/resources/templates/todos.handlebars
@@ -3,6 +3,10 @@
   <input id="new-todo" type="text" placeholder="What needs to be done?">
 {{/view}}
 
-{{#collection SC.TemplateCollectionView contentBinding="Todos.todoListController"}}
-  {{content.title}}
+{{#view Todos.StatsView id="stats"}}
+  {{displayRemaining}} remaining
+{{/view}}
+
+{{#collection SC.TemplateCollectionView contentBinding="Todos.todoListController" itemClassBinding="content.isDone"}}
+  {{view Todos.MarkDoneView}}
 {{/collection}}
