add the clear completed button

--- a/apps/todos/resources/templates/todos.handlebars
+++ b/apps/todos/resources/templates/todos.handlebars
@@ -4,6 +4,9 @@
 {{/view}}
 
 {{#view Todos.StatsView id="stats"}}
+{{#view SC.Button classBinding="isActive" target="Todos.todoListController" action="clearCompletedTodos"}}
+    Clear Completed Todos
+  {{/view}}
   {{displayRemaining}} remaining
 {{/view}}
 
