mark all as done

--- a/apps/todos/resources/templates/todos.handlebars
+++ b/apps/todos/resources/templates/todos.handlebars
@@ -10,6 +10,8 @@
   {{displayRemaining}} remaining
 {{/view}}
 
+{{view SC.Checkbox class="mark-all-done" title="Mark All as Done" valueBinding="Todos.todoListController.allAreDone"}}
+
 {{#collection SC.TemplateCollectionView contentBinding="Todos.todoListController" itemClassBinding="content.isDone"}}
   {{view Todos.MarkDoneView}}
 {{/collection}}
