--- a/apps/todos/resources/templates/todos.handlebars
+++ b/apps/todos/resources/templates/todos.handlebars
@@ -3,15 +3,22 @@
   <input id="new-todo" type="text" placeholder="What needs to be done?">
 {{/view}}
 
+{{#view Todos.AddTagView}}
+  <input id="add-tag" type="text" placeholder="Tag">
+{{/view}}
+
 {{#view Todos.StatsView id="stats"}}
 {{#view SC.Button classBinding="isActive" target="Todos.todoListController" action="clearCompletedTodos"}}
     Clear Completed Todos
   {{/view}}
   {{displayRemaining}} remaining
+  {{#view SC.Button classBinding="isActive" target="Todos.todoListController" action="sortTodos"}}
+      Sort Todos by Tag
+    {{/view}}
 {{/view}}
 
 {{view SC.Checkbox class="mark-all-done" title="Mark All as Done" valueBinding="Todos.todoListController.allAreDone"}}
 
-{{#collection SC.TemplateCollectionView contentBinding="Todos.todoListController" itemClassBinding="content.isDone" id="all-todos"}}
-  {{view Todos.MarkDoneView}}
+{{#collection Todos.ListView id="all-todos"}}
+  {{view Todos.MarkDoneView}} Tag: {{content.tag}}
 {{/collection}}
